<resources>
    <string name="app_name">多肉交流</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <!-- main start -->
    <string name="main_user_remove">用户被移除</string>
    <string name="main_user_forbidden">用户不存在</string>
    <!-- main end -->

    <string name="facebook_app_id">1266254913438718</string>


    <string name="umeng_update_content">版本号：6.4.3\n1.修复了反馈中空指针的bug\n2.增加了微信分享小程序的功能\n3.解决了部分已知bug</string>
    <string name="umeng_home_title">U-Share产品Demo</string>
    <string name="umeng_home_update">新版更新内容</string>
    <string name="umeng_share_title">分享</string>
    <string name="umeng_auth_title">授权</string>
    <string name="umeng_delauth_title">删除授权</string>
    <string name="umeng_getinfo_title">获取用户信息</string>
    <string name="umeng_check_title">自检工具</string>
    <string name="umeng_menu_title">分享菜单模板</string>

    <string name="umeng_check_sign">检查签名</string>
    <string name="umeng_check_sina">检查新浪</string>
    <string name="umeng_check_wx">检查微信</string>
    <string name="umeng_check_alipay">检查支付宝</string>
    <string name="umeng_check_qq">检查qq</string>
    <string name="umeng_check_fb">检查facebook</string>
    <string name="umeng_check_vk">vkontakte</string>
    <string name="umeng_choose_style">选择分享类型</string>

    <string name="umeng_sharebutton_copy">复制文本</string>
    <string name="umeng_sharebutton_copyurl">复制连接</string>

    <string name="theme">主题</string>
    <string name="refuse">拒绝</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="invite_join_group">邀请加群</string>
    <string name="accept_join_group">同意加群</string>
    <string name="refuse_join_group">拒绝加群</string>
    <string name="Are_refuse_with">拒绝成功</string>
    <string name="Refuse_with_failure">拒绝失败</string>
    <string name="user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="about_me">\nImGeek：<a href="http://www.imgeek.org/people/ggyuer">ggyuer</a>\n\nGithub：<a href="https://github.com/ggyuer">ggyuer</a></string>
    <string name="all">全部</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="fuli">福利</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="video">休息视频</string>
    <string name="front">前端</string>
    <string name="resource">拓展资源</string>
    <string name="app">App</string>
    <string name="about">关于我</string>
    <string name="more">瞎推荐</string>

    <string name="loading_message">加载中......</string>
    <string name="upload_message">上传中......</string>
    <string name="save_message">保存中......</string>

    <string name="main_home">同好社区</string>
    <string name="main_news">最新资讯</string>
    <string name="main_topic">多肉话题</string>
    <string name="main_wiki">多肉百科</string>
    <string name="main_breed">多肉养殖</string>
    <string name="main_question">同好问答</string>
    <string name="main_friends">通讯录</string>
    <string name="main_groups">群聊</string>
    <string name="main_setting">设置</string>
    <string name="group_dialog_context">设置你在群里的昵称，这个昵称只会在这个群里显示！</string>

    <string name="join_need_owner_approval">加入公开群需要群主同意</string>
    <string name="empty_view_hint">暂无数据。点击刷新</string>
    <string name="error_view_hint">加载失败，点击重试</string>
    <string name="no_network_view_hint">网络异常，点击重试</string>
</resources>
